--- a/ec/store/templates/store/passwordchangedone.html
+++ b/ec/store/templates/store/passwordchangedone.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %}
+{% extends 'store/base.html' %}
 {% load static %}
 {% block title %}Buy Now{% endblock title %}
 {% block main-content %}
