--- a/ec/store/templates/store/password_reset_complete.html
+++ b/ec/store/templates/store/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %}
+{% extends 'store/base.html' %}
 {% load static %}
 {% block title %}Login{% endblock title %}
 {% block main-content %}
