--- a/ec/store/templates/store/base.html
+++ b/ec/store/templates/store/base.html
@@ -26,6 +26,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
@@ -76,12 +77,14 @@
             <li class="nav-item mx-2">
               <a href="#" class="nav-link text-white">Wishlist 4</a>
             </li>
+            {% else %}
             <li class="nav-item mx-2">
               <a href="{% url 'login' %}" class="nav-link text-white">Login</a>
             </li>
             <li class="nav-item mx-2">
               <a href="{% url 'customerregistration' %}" class="nav-link text-white">Registration</a>
             </li>
+            {% endif %}
           </ul>
         </div>
       </nav>
