--- a/ec/store/templates/store/productdetail.html
+++ b/ec/store/templates/store/productdetail.html
@@ -19,12 +19,12 @@
                     <li>{{product.description}}</li>
                     <li>{{product.composition}}</li>
                     <li>{{product.prodapp}}</li>
-                </ul>
-                <div class="buttons row flex" style="font-family: Rajdhani;">                   
-                    <button type="submit" class="d-grid gap-2 btn1 btn btn-danger p-1 m-1 btn-lg text-decoration-none text-while">Add to Cart</button>
-                    <div class="btn btn-dark p-1 m-1 btn-lg"><a href="#" class="text-decoration-none text-white">Buy Now</a></div>
-                
-                </div>
+                </ul>                  
+                    <form action="/add-to-cart" class="d-inline">
+                        <input type="hidden" name="prod_id" value={{product.id}} />
+                        <button type="submit" class="btn btn-primary shadow px-5 py-2">Add to Cart</button>
+                    </form>
+                    <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Buy Now</a>
             </div>
         </div>
     </div>
