--- a/ec/store/templates/store/checkout.html
+++ b/ec/store/templates/store/checkout.html
@@ -55,10 +55,46 @@
                     <input type="number" class="form-control" name="totalamount" value="{{ totalamount }}" readonly>
                 </div>
                 <div class="text-end">
-                    <button type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Continue</button>
+                    <button id="rzp-button1" type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Payment</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
 {% endblock main-content %}
+
+
+{% block payment-gateway %}
+<script>
+    var options = {
+        "key": "rzp_test_QFJvkwLZFGBhFC", // Enter the Key ID generated from the Dashboard
+        "amount": "((razoramount}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+        "currency": "INR",
+        "name": "Neel Products",
+        "description": "Purchase Product",
+        " handler": function (response){
+            console.log("success")
+            var form = document.getElementById("myform");
+            //alert(form.elements["custid"].value);
+            //alert(response.razorpay_payment_id);
+            //alert(response.razorpay_order_id);
+            //alert(response.razorpay_signature)
+            window.location.href = `http://localhost:8000/paymentdone?order_id=${response.razorpay_order_id}&payment_id=${response.razorpay_payment_id}&cust_id=${form.elements["custid"].value}`
+        },
+        
+        "theme": {
+            "color": "#3399cc"
+        }
+    };
+    var rzp1 = new Razorpay(options);
+    rzp1.on('payment.failed',function(response){
+        alert(response.error.description);
+    });
+    document.getElementById('rzp-button1').onclick = function(e){
+        console.log("button click");
+           rzp1.open();
+           e.preventDefault();
+    }    
+</script>
+{% endblock payment-gateway %}
+    
