--- a/ec/store/templates/store/checkout.html
+++ b/ec/store/templates/store/checkout.html
@@ -67,7 +67,7 @@
 {% block payment-gateway %}
 <script>
     var options = {
-        "key": "rzp_test_QFJvkwLZFGBhFC", // Enter the Key ID generated from the Dashboard
+        "key": "rzp_test_jiQTF06FgF7orf", // Enter the Key ID generated from the Dashboard
         "amount": "{{razoramount}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
         "currency": "INR",
         "name": "Neel Products",
